[feat] Небольшое изменение [1]

--- a/index.html
+++ b/index.html
@@ -1,107 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;600;700&display=swap" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
-    <link href="reset.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link href="style.css" rel="stylesheet" />
+    <link href="reset.css" rel="stylesheet" />
     <title>ROBOSCHOOL</title>
-</head>
-<body>
+  </head>
+  <body>
+    <!-- asdsa -->
     <header class="header">
-        <div class="header__container container">
-            <a class="logo" href="">ROBO.SCHOOL</a>
-            <nav class = nav>
-                <a class="nav__link" href="">О школе</a>
-                <a class="nav__link" href="">Тренеры</a>
-                <a class="nav__link" href="">Стоимость</a>
-            </nav>
-            <a class="num" href="tel:+78000001122">+7 800 000 11 22</a>
-        </div>
+      <div class="header__container container">
+        <a class="logo" href="">ROBO.SCHOOL</a>
+        <nav class="nav">
+          <a class="nav__link" href="">О школе</a>
+          <a class="nav__link" href="">Тренеры</a>
+          <a class="nav__link" href="">Стоимость</a>
+        </nav>
+        <a class="num" href="tel:+78000001122">+7 800 000 11 22</a>
+      </div>
     </header>
     <main class="main">
-        <section class="start-page">
-            <div class="start-page__container container">
-                <div class="start-page__content">
-                    <h1 class="start-page__name">ROBO SCHOOL</h1>
-                    <p class="start-page__intro">Курсы повышения квалификации по робототехнике<br>
-                    для педагогов начальной школы</p>
-                    <button class="start-page__button">Записаться на курс</button>
-                </div>
-                <div class="start-page__images">
-                    <div class="start-page__circle"></div>
-                    <div class="start-page__girl"></div>
-                </div>
+      <section class="start-page">
+        <div class="start-page__container container">
+          <div class="start-page__content">
+            <h1 class="start-page__name">ROBO SCHOOL</h1>
+            <p class="start-page__intro">
+              Курсы повышения квалификации по робототехнике<br />
+              для педагогов начальной школы
+            </p>
+            <button class="start-page__button">Записаться на курс</button>
+          </div>
+          <div class="start-page__images">
+            <div class="start-page__circle"></div>
+            <div class="start-page__girl"></div>
+          </div>
+        </div>
+      </section>
+      <section class="info">
+        <div class="info__container container">
+          <p class="info__about">
+            <span class="about__bold">Robo School</span> – учреждение для
+            формирования кадрового<br />
+            педагогического резерва в сфере робототехники<br />
+            и программирования
+          </p>
+          <div class="info__count">
+            <div class="info__complexes">
+              <h2 class="info__number">10</h2>
+              <p class="info__text">
+                УМК по различным<br />
+                направлениям по робототехнике
+              </p>
             </div>
-        </section>
-        <section class="info">
-            <div class="info__container container">
-                <p class="info__about"><span class="about__bold">Robo School</span> – учреждение для формирования кадрового<br>
-                    педагогического резерва в сфере робототехники<br>
-                    и программирования</p>
-                <div class="info__count">
-                    <div class="info__complexes">
-                        <h2 class="info__number">10</h2>
-                        <p class="info__text">УМК по различным<br>
-                        направлениям по робототехнике</p>
-                    </div>
-                    <div class="info__schools">
-                        <h2 class="info__number">20</h2>
-                        <p class="info__text">Школ, в которых запущена<br>
-                        робототехника</p>
-                    </div>
-                    <div class="info__teachers">
-                        <h2 class="info__number">100</h2>
-                        <p class="info__text">Педагогов прошедших курсы<br>
-                        повышения квалификации</p>
-                    </div>
-                    <div class="info__children">
-                        <h2 class="info__number">10000</h2>
-                        <p class="info__text">Обученных детей на базе<br>
-                        собственных центров</p>
-                    </div>
-                </div>
+            <div class="info__schools">
+              <h2 class="info__number">20</h2>
+              <p class="info__text">
+                Школ, в которых запущена<br />
+                робототехника
+              </p>
             </div>
-        </section>
-        <section class="aftercourse">
-            <div class="aftercourse__container container">
-                <h2 class="aftercourse__title">Что вы получите после курса</h2>
-                <div class="aftercourse__getting">
-                    <div class="aftercourse__certificate">
-                        <h3 class="aftercourse__thing">Удостоверение</h3>
-                        <p class="aftercourse__text">Дающее право преподавать робототехнику<br>
-                            для детей 6-12 лет в образовательных<br>
-                            учреждениях
-                        </p>
-                    </div>
-                    <div class="aftercourse__knowledge">
-                        <h3 class="aftercourse__thing">Знания</h3>
-                        <p class="aftercourse__text">
-                            По основам разработки учебно-<br>
-                            методических комплексов<br>
-                            по робототехнике и программированию
-                        </p>
-                    </div>
-                    <div class="aftercourse__practice">
-                        <div class="aftercourse__practicenote">
-                            <h3 class="aftercourse__thing">Практика</h3>
-                            <div class="aftercourse__tooltip">
-                                <button class="aftercourse__icon-container"></button>
-                                <p class="aftercourse__popup-text">При наличии свободных мест</p>
-                            </div>
-                        </div>
-                        <p class="aftercourse__text">
-                            Возможность пройти практику<br>
-                            по преподаванию робототехники на базе<br>
-                            R:ED LAB (в оффлайн или онлайн формате)
-                        </p>
-                    </div>
-                </div>
+            <div class="info__teachers">
+              <h2 class="info__number">100</h2>
+              <p class="info__text">
+                Педагогов прошедших курсы<br />
+                повышения квалификации
+              </p>
             </div>
-        </section>
+            <div class="info__children">
+              <h2 class="info__number">10000</h2>
+              <p class="info__text">
+                Обученных детей на базе<br />
+                собственных центров
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="aftercourse">
+        <div class="aftercourse__container container">
+          <h2 class="aftercourse__title">Что вы получите после курса</h2>
+          <div class="aftercourse__getting">
+            <div class="aftercourse__certificate">
+              <h3 class="aftercourse__thing">Удостоверение</h3>
+              <p class="aftercourse__text">
+                Дающее право преподавать робототехнику<br />
+                для детей 6-12 лет в образовательных<br />
+                учреждениях
+              </p>
+            </div>
+            <div class="aftercourse__knowledge">
+              <h3 class="aftercourse__thing">Знания</h3>
+              <p class="aftercourse__text">
+                По основам разработки учебно-<br />
+                методических комплексов<br />
+                по робототехнике и программированию
+              </p>
+            </div>
+            <div class="aftercourse__practice">
+              <div class="aftercourse__practicenote">
+                <h3 class="aftercourse__thing">Практика</h3>
+                <div class="aftercourse__tooltip">
+                  <button class="aftercourse__icon-container"></button>
+                  <p class="aftercourse__popup-text">
+                    При наличии свободных мест
+                  </p>
+                </div>
+              </div>
+              <p class="aftercourse__text">
+                Возможность пройти практику<br />
+                по преподаванию робототехники на базе<br />
+                R:ED LAB (в оффлайн или онлайн формате)
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
