--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>ROBOSCHOOL</title>
   </head>
   <body>
+    <!-- comment -->
     <header class="header">
       <div class="header__container container">
         <a class="logo" href="">ROBO.SCHOOL</a>
